--- a/server/makefile
+++ b/server/makefile
@@ -1,12 +1,18 @@
-GCC ?= gcc
-all:	aesdsocket
-aesdsocket : aesdsocket.o
+# GCC ?= gcc
+CC ?= $(CROSS_COMPILE)gcc
+CFLAGS ?=
+TARGET ?= aesdsocket
+LDFLAGS ?= -lpthread -lrt 
+
+all:	$(TARGET)
+$(TARGET) : $(TARGET).o
 # $(CROSS_COMPILE)gcc -o aesdsocket aesdsocket.o 
-	$(GCC) -o aesdsocket aesdsocket.o 
-aesdsocket.o : aesdsocket.c 
+# $(GCC) -o aesdsocket aesdsocket.o 
+	$(CC) -o $(TARGET) $(LDFLAGS) $(TARGET).o 
+$(TARGET).o : $(TARGET).c 
 # $(CROSS_COMPILE)gcc -c aesdsocket.c
-	$(GCC) -c aesdsocket.c
+	$(CC) -c $(CFLAGS) $(TARGET).c
 
 clean :
-	rm -f aesdsocket aesdsocket.o
+	rm -f $(TARGET) $(TARGET).o
 	
